--- a/ksuStudy/python_programming_2nd.ipynb
+++ b/ksuStudy/python_programming_2nd.ipynb
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -104,25 +104,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EFwW5TtFfFpO",
-        "outputId": "c4125bd8-ac38-4fb0-8c37-95135ce5d1fe"
+        "outputId": "b717dd23-4c04-4857-d856-a28408e15238"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "hello world\n"
+            "hello world1\n"
           ]
         }
       ],
       "source": [
-        "print('hello world')"
+        "print('hello world1')"
       ]
     },
     {
