--- a/ksuStudy/python_programming_2nd.ipynb
+++ b/ksuStudy/python_programming_2nd.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/gloria9468/TIL/blob/main/ksuStudy/python_programming_2nd.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -34,7 +34,8 @@
         "        * 컴퓨팅 파워를 쉽게 조절 가능\n",
         "    - 90분간 미사용시 세션이 끊어짐\n",
         "    - 최대 12시간 연속 사용 가능\n",
-        "    - 여러사용자들과 동시에 사용가능\n",
+        "    - 여러사용자들과 동시에 사용가능..\n",
+        "    \n",
         "\n",
         "+ <strong>실습 순서</strong>\n",
         "  1. colab 둘러보기\n",
@@ -87,14 +88,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "86400"
             ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 2
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -114,8 +115,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "hello world1\n"
           ]
@@ -1557,10 +1558,10 @@
   ],
   "metadata": {
     "colab": {
+      "include_colab_link": true,
       "name": "python_programming_2nd.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
