--- a/ksuStudy/python_programming/3rd-week-main/python_programming_3rd.ipynb
+++ b/ksuStudy/python_programming/3rd-week-main/python_programming_3rd.ipynb
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -43,13 +43,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "a: 10  b: python c:1.34\n"
+            "a: 10  b: python11 c:1.34\n"
           ]
         }
       ],
       "source": [
         "a = 10\n",
-        "b = \"python\"\n",
+        "b = \"python11\"\n",
         "c = 1.34\n",
         "\n",
         "print(\"a: %d  b: %s c:%.2f\" %(a,b,c))"
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -78,13 +78,11 @@
         {
           "data": {
             "text/plain": [
-              "str"
+              "int"
             ]
           },
-          "execution_count": 3,
-          "metadata": {
-            "tags": []
-          },
+          "execution_count": 7,
+          "metadata": {},
           "output_type": "execute_result"
         }
       ],
@@ -122,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -137,10 +135,8 @@
               "float"
             ]
           },
-          "execution_count": 25,
-          "metadata": {
-            "tags": []
-          },
+          "execution_count": 8,
+          "metadata": {},
           "output_type": "execute_result"
         }
       ],
@@ -221,19 +217,20 @@
         {
           "data": {
             "text/plain": [
-              "10"
+              "112"
             ]
           },
-          "execution_count": 30,
-          "metadata": {
-            "tags": []
-          },
+          "execution_count": 9,
+          "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "Apple = 10    # 변수명의 첫문자로 대문자가 올 수는 있으나, 권장하지는 않는다.\n",
-        "Apple"
+        "Apple\n",
+        "\n",
+        "NUM = 112     # 완전한 상수로 사용하는 경우에는 이렇게 전부 대문자로 사용하기도 함.\n",
+        "NUM"
       ]
     },
     {
@@ -247,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -286,13 +283,13 @@
         "c = a/b                      # 나누기 연산\n",
         "print(\"a/b : c =%f \"%c)     \n",
         "\n",
-        "c = a//b                    # 정수 몫\n",
+        "c = a//b                     # 정수 몫\n",
         "print(\"a//b : c =%d \"%c)\n",
         "\n",
-        "c = a%b                    # 나머지 연산\n",
+        "c = a%b                      # 나머지 연산\n",
         "print(\"a%%b : c =%d \"%c)\n",
         "\n",
-        "c = a**b                      # 누승 연산\n",
+        "c = a**b                     # 누승 연산\n",
         "print(\"a**b : c =%d \"%c)"
       ]
     },
@@ -513,7 +510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -563,7 +560,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.13.2"
     }
   },
   "nbformat": 4,
