파이썬 5주차

--- a/ksuStudy/python_programming/python_5th_week-main/python_programming_5th.ipynb
+++ b/ksuStudy/python_programming/python_5th_week-main/python_programming_5th.ipynb
@@ -501,7 +501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -514,32 +514,35 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "dict_keys(['name', 'phone', 'birth'])\n"
+            "dict_keys(['name', 'phone', 'birth'])\n",
+            "<class 'dict_keys'>\n",
+            "['name', 'phone', 'birth']\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "['name', 'phone', 'birth']"
+              "list"
             ]
           },
-          "execution_count": 7,
-          "metadata": {
-            "tags": []
-          },
+          "execution_count": 32,
+          "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "a = {'name': 'pey', 'phone': '01022223333', 'birth':'1118'}     # key 만을 모아서 dict_keys 객체로 반환\n",
         "print(a.keys())\n",
+        "print(type(a.keys()))\n",
         "\n",
-        "list(a.keys())  # key를 모아서 리스트로 변환"
+        "b = list(a.keys())  # key를 모아서 리스트로 변환\n",
+        "print(b)\n",
+        "type(b)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -549,20 +552,19 @@
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "dict_values(['pey', '01022223333', '1118'])"
-            ]
-          },
-          "execution_count": 8,
-          "metadata": {
-            "tags": []
-          },
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'dict_values'>\n",
+            "<class 'list'>\n"
+          ]
         }
       ],
       "source": [
-        "a.values()    # value 만을 모아서 dict_value 객체로 반환"
+        "b = a.values()    # value 만을 모아서 dict_value 객체로 반환\n",
+        "print(type(b))\n",
+        "c = list(b)\n",
+        "print(type(c))"
       ]
     },
     {
@@ -757,7 +759,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -772,15 +774,13 @@
               "{'a', 'e', 'l', 'p'}"
             ]
           },
-          "execution_count": 9,
-          "metadata": {
-            "tags": []
-          },
+          "execution_count": 35,
+          "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "s2 = set(\"apple\")\n",
+        "s2 = set(\"apple\") # 중복된 값은 빼줌.\n",
         "s2"
       ]
     },
@@ -964,7 +964,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 37,
       "metadata": {
         "id": "9QaB8C0dnXWn"
       },
@@ -977,13 +977,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "ytSvXx6nnOCI"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "서울시 서울특별시 seoul 서울 Seoul 서울-특별시 서울 서울-시\n"
+          ]
+        }
+      ],
       "source": [
-        "addr_str = addr1_str +\" \"+ addr2_str + \" \" + addr3_str"
+        "addr_str = addr1_str +\" \"+ addr2_str + \" \" + addr3_str\n",
+        "print(addr_str) # + 만 붙어있으면 자바에서 처럼 문자열로 연결 시킴"
       ]
     },
     {
